# coverart-cli

./: .coderabbit.yaml  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml  release-please-config.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: auto-enable-automerge.yml  automerge.yml  ci.yml  codeql.yml  dependabot-automerge.yml  prepare-release.yml  release-please.yml  release.yml  supply-chain.yml
docs/: make_demo_report.py
src/coverart_cli/: __init__.py  __main__.py  cli.py  config.py  core.py  report.py  tagging.py
src/coverart_cli/providers/: __init__.py  base.py  deezer.py  itunes.py  lastfm.py  musicbrainz.py
src/coverart_cli/templates/: report.html
tests/: test_config.py  test_integration.py  test_providers.py  test_report.py  test_tagging.py  test_workflows.py
