[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coverart-cli"
version = "0.2.0"
description = "Fetch and embed album covers from Last.fm and MusicBrainz into MP3 and M4A files"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "WildDragonKing", email = "noreply@users.noreply.github.com" }]
keywords = ["music", "album-art", "cover-art", "lastfm", "musicbrainz", "id3", "mp3", "m4a", "mutagen"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Utilities",
]
dependencies = [
    "mutagen>=1.47",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.5",
]

[project.scripts]
coverart = "coverart_cli.cli:main"

[project.urls]
Homepage = "https://github.com/WildDragonKing/coverart-cli"
Repository = "https://github.com/WildDragonKing/coverart-cli"
Issues = "https://github.com/WildDragonKing/coverart-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/coverart_cli"]

[tool.hatch.build.targets.wheel.force-include]
"src/coverart_cli/templates/report.html" = "coverart_cli/templates/report.html"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
