[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "coverart-cli"
version = "0.4.2"
description = "Fetch missing album covers from Last.fm, iTunes, Deezer, MusicBrainz; embed in MP3/M4A/FLAC/Ogg and write a cover.jpg sidecar"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "WildDragonKing", email = "noreply@users.noreply.github.com" }]
keywords = ["music", "album-art", "cover-art", "lastfm", "itunes", "deezer", "musicbrainz", "id3", "mp3", "m4a", "flac", "ogg", "mutagen"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Utilities",
]
dependencies = [
    "mutagen>=1.47",
]

[project.optional-dependencies]
dev = [
    "build==1.5.1",
    "pyrefly==1.1.1",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "ruff==0.15.21",
    "zizmor==1.26.1",
]

[project.scripts]
coverart = "coverart_cli.cli:main"

[project.urls]
Homepage = "https://github.com/WildDragonKing/coverart-cli"
Repository = "https://github.com/WildDragonKing/coverart-cli"
Issues = "https://github.com/WildDragonKing/coverart-cli/issues"
Changelog = "https://github.com/WildDragonKing/coverart-cli/blob/main/CHANGELOG.md"
Documentation = "https://github.com/WildDragonKing/coverart-cli#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/coverart_cli"]

[tool.hatch.build.targets.wheel.force-include]
"src/coverart_cli/templates/report.html" = "coverart_cli/templates/report.html"
"src/coverart_cli/py.typed" = "coverart_cli/py.typed"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
